Add a bit of spacing between icon and text in home

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ html, body {
 .home__contact-resource {
     display: flex;
     align-items: center;
+    gap: .25rem;
 }
 
 .home__contact-resource > span {
