--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
     font-family: "Open Sans", sans-serif;
 
-    /*scroll-behavior: smooth !important;*/
+    scroll-behavior: smooth !important;
 
     --main-bg-color: #ffffff;
     --secondary-bg-color: rgba(255, 182, 18, 0.4);
@@ -76,7 +76,8 @@ body {
 
 .experience-container,
 .about-container,
-.portfolio-container {
+.portfolio-container,
+.contact-container {
     max-width: 60vw;
     margin-left: auto;
     margin-right: auto;
@@ -218,6 +219,42 @@ body {
 }
 
 /* Contact */
+.contact__items-container > li {
+    list-style-type: none;
+}
+
+.contact__item-logo {
+    height: 2.5rem;
+    border-radius: 4px;
+}
+
+.contact__items-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.contact-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-section__title {
+    text-align: center;
+}
+
+.contact__item-name {
+    font-size: 1.2rem;
+}
+
+.contact__item-container {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    text-decoration: none;
+    color: black;
+}
 
 /* Footer */
 .footer-container {
