--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     --main-text-color: #000000;
 
     --pitt-blue: #003594;
-    --pitt-yellow: #FFB81C;
+    --pitt-yellow: #ffb81c;
 }
 
 html,
@@ -48,6 +48,27 @@ body {
 
 .nav-container__links > li {
     list-style-type: none;
+}
+
+.nav-container__link {
+    background: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0)
+        ),
+        linear-gradient(
+            to right,
+            #101820,
+            #FFB612
+        );
+    background-size: 100% 3px, 0 3px;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms;
+}
+
+.nav-container__link:hover {
+    background-size: 0 3px, 100% 3px;
 }
 
 /* Section Shared CSS */
@@ -164,11 +185,11 @@ body {
 }
 
 .experience__skills-container {
-    flex: .3;
+    flex: 0.3;
 }
 
 .experience__experience-container {
-    flex: .7;
+    flex: 0.7;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -218,7 +239,7 @@ body {
 .portfolio__project-header {
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
     text-decoration: none;
     color: black;
 }
@@ -256,7 +277,7 @@ body {
 .contact__item-container {
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
     text-decoration: none;
     color: black;
 }
