Fix phone number turning blue

--- a/styles.css
+++ b/styles.css
@@ -361,7 +361,7 @@ body {
         align-items: center;
     }
 
-    .home__contact-resource {
+    .home__contact-resource-number {
         text-decoration: none;
         color: black;
     }
